[package]
name = "csvdump"
version = "0.2.0"
authors = ["Chris Moerz <freebsd@ny-central.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.7"
oracle = { version = "0.3.2", features = ["chrono"] }
serde = { version = "1.0.117", features = ["derive"] }
csv = "1.1.3"
clap = "2.33.3"
lib_oradb = { path = "../lib_oradb" }
colored = "2.0.0"
log = "0.4.11"
simplelog = "0.8.0"
